objects/ASI_CRM_Criteria_Set__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_SG_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Name__c</fullName>
        <label>Criteria Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Total_Criteria_Weight__c</fullName>
        <description>Total Criteria Threshold Weight</description>
        <label>Total Criteria Weight</label>
        <summarizedField>ASI_CRM_Criteria_Threshold__c.ASI_CRM_SG_Weight__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Criteria_Threshold__c.ASI_CRM_SG_Criteria_Set__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Criteria_Score__c</fullName>
        <label>Total Criteria Score</label>
        <summarizedField>ASI_CRM_Criteria_Threshold__c.ASI_CRM_Score__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Criteria_Threshold__c.ASI_CRM_SG_Criteria_Set__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                    <default>true</default>
                    <label>Central</label>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Criteria Set</label>
    <listViews>
        <fullName>ASI_CRM_MY_Criteria_Sets</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Criteria_Set__c.ASI_MY_Volume_Potential_Criteria,ASI_CRM_Criteria_Set__c.MY_Image_Level_Criteria</value>
        </filters>
        <label>MY Criteria Sets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TH_Criteria_Sets</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Criteria_Set__c.ASI_CRM_TH_Image_Level_Criteria,ASI_CRM_Criteria_Set__c.ASI_CRM_TH_Volume_Potential_Criteria</value>
        </filters>
        <label>TH Criteria Sets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_Criteria_Sets</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Name__c</columns>
        <columns>ASI_CRM_SG_Total_Criteria_Weight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Criteria_Set__c.ASI_CRM_TW_Image_Level_Criteria</value>
        </filters>
        <label>TW Criteria Sets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_VN_All_Image_Level_Criteria_Sets</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Name__c</columns>
        <columns>ASI_CRM_Total_Criteria_Score__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Criteria_Set__c.ASI_CRM_VN_Image_Level_Criteria</value>
        </filters>
        <label>All VN Image Level Criteria Sets</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Name__c</columns>
        <columns>ASI_CRM_SG_Total_Criteria_Weight__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Criteria Set No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Criteria Sets</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_TH_Image_Level_Criteria</fullName>
        <active>true</active>
        <label>TH Image Level Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_Volume_Potential_Criteria</fullName>
        <active>true</active>
        <label>TH Volume Potential Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Image_Level_Criteria</fullName>
        <active>true</active>
        <label>TW Image Level Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Volume_Potential_Criteria</fullName>
        <active>true</active>
        <label>TW Volume Potential Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Image_Level_Criteria</fullName>
        <active>true</active>
        <label>VN Image Level Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MY_Volume_Potential_Criteria</fullName>
        <active>true</active>
        <label>MY Volume Potential Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_SG_Image_Level_Criteria</fullName>
        <active>true</active>
        <label>SG Image Level Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_SG_Volume_Potential_Criteria</fullName>
        <active>true</active>
        <label>SG Volume Potential Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>MY_Image_Level_Criteria</fullName>
        <active>true</active>
        <label>MY Image Level Criteria</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>